[gd_scene load_steps=7 format=3 uid="uid://bf3wnwihk7ymg"]

[ext_resource type="Script" path="res://game.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dr2p70jo7e4kn" path="res://level/level.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://d0ni64ucb3ym2" path="res://player/player.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c7ai4bigaryci" path="res://gui/pause_menu_singleplayer.tscn" id="4_x6l06"]
[ext_resource type="PackedScene" uid="uid://ixy03whji3r4" path="res://gui/HeartContainer.tscn" id="5_7sjqd"]
[ext_resource type="PackedScene" uid="uid://do7htx4sqmcnh" path="res://music.tscn" id="5_rkna2"]

[node name="Game" type="Node"]
process_mode = 3
script = ExtResource("2")

[node name="Level" parent="." instance=ExtResource("3")]

[node name="Player" parent="Level" instance=ExtResource("4")]
position = Vector2(90, 546)

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource("4_x6l06")]

[node name="HeartContainer" parent="InterfaceLayer" instance=ExtResource("5_7sjqd")]
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0
scale = Vector2(3, 3)

[node name="Music" parent="." instance=ExtResource("5_rkna2")]

[node name="StartPos" type="Marker2D" parent="."]
position = Vector2(88, 535)

[connection signal="coin_collected" from="Level/Player" to="InterfaceLayer/PauseMenu" method="_on_coin_collected"]
[connection signal="player_death" from="Level/Player" to="." method="_on_player_player_death"]
